some last minute changes to the slides
These changes were made right before the presentation and I forgott to commit them

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -336,7 +336,7 @@
 \begin{frame}{Outcome}{Test Run Visualization}
 	\centering
 	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figures/all-color-small.png}\\
-	{\footnotesize Visualization model versions and deltas between them}
+	{\footnotesize Visualization of model versions and deltas between them}
 \end{frame}
 
 \begin{frame}{Scope of this Work}{What this work is not about}
